# phantomguard

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
phantomguard/: __init__.py  checks.py  cli.py  gates.py  overfitting.py  report.py  stats.py  verify.py  walkforward.py
tests/: test_overfitting.py  test_stats.py
